--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
     </style>
 
-    <script src="/bower_components/angular/angular.js"></script>
+    <script src="angular.min.js"></script>
     <script src="app.js"></script>
 </head>
 <body ng-app="LunchCheck">
